# nanotorch

./: .flake8  .gitignore  AGENTS.md  CLAUDE.md  DEBUG_GUIDE.md  QUICKSTART.md  QUICKSTART_CN.md  README.md  README_CN.md  README_VISUALIZATION.md  README_VISUALIZATION_CN.md  pyproject.toml  start-backend.sh  start-frontend.sh  test_api.py  test_setup.sh
.claude/: settings.local.json
backend/: README.md  requirements.txt
benchmarks/: benchmark_matmul_fixed.py  conv2d_backward_benchmark.py  conv2d_benchmark.py  conv2d_vectorized.py  gradient_accumulation.py  investigate_variance.py  matmul_gradient_benchmark.py  matmul_microbenchmark.py  memory_usage.py  profile_backward.py  profile_small_tensor.py  realistic_benchmark.py  robust_benchmark.py  robust_benchmark_results.json  tensor_operations.py  tensor_operations.py.backup
docs/: api.md  autograd_boundaries.md  benchmark_diagnosis_and_fix.md  design.md  getting_started.md  performance.md  sd-viz-plan.md
examples/: advanced_example.py  autograd_demo.py  chat_llm.py  conv2d_training.py  conv3d_demo.py  convtranspose_demo.py  indexing_operations.py  instance_norm_demo.py  mini_gpt.py  mnist_classifier.py  normalization_1d_3d_demo.py  pooling_demo.py  simple_neural_net.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
nanotorch/: __init__.py  autograd.py  device.py  tensor.py  utils.py
sd-viz-frontend/: DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json
tests/: test_adaptive_pooling.py  test_attention.py  test_autograd.py  test_batchnorm.py  test_batchnorm_1d_3d.py  (+20 more)
(+431 files in other folders)
